added Diana McHugh's AUC citations and comments

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -125,7 +125,17 @@ csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for in
 Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Southcoast Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled, which limited the estimation of historical SMU status to years with complete data series.  Although the time-series of some indicators stocks extends back to 1953, others began as late as 1995 limiting our analyses to these recent time-series. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for indicators stocks were estimated based on a combination of snorkel,  boat or aerial surveys, bank walks, and fence counts, which range in accuracy and precision (see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods). Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys is a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For stocks that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to abundance estimates. 
 
 
+<!--Diana McHugh: Citations for AUC
+Irvine, J. R., J. F. T. Morris, and L. M. Cobb. 1993. Area-under-the-curve salmon escapement estimation manual. Can. Tech. Rep. Fish. Aquat. Sci. 1932: 84 p.
 
+Bocking, R. C., J. R. Irvine, K. K. English, and M. Labelle. Evaluation of random and indexing sampling designs for estimating coho salmon (Oncorhynchus kisutch) escapement to three Vancouver Island streams. Canadian Technical Report of Fisheries and Aquatic Sciences No. 1639, 95 p. (1988).
+
+Cousens, N., G. Thomas, C. Swann, and M. Healey. A review of salmon escapement estimation techniques. Canadian Technical Report of Fisheries and Aquatic Sciences, 1101, 122 p. (1982).
+
+Perrin, C. J., and J. R. Irvine. A review of survey life estimates as they apply to the area under the curve method of estimating spawning escapement of Pacific salmon. Canadian Technical Report of Fisheries and Aquatic Sciences, 1733, 49 p. (1990).
+
+The WCVI indicator stocks are all estimated based on periodic snorkel surveys, except for Somass, which has fishways.  Snorkel surveys are better for counting the mixture of species present in Sept and Oct, compared to stream walks.  Area under the curve is used for most years, with the occasional peak count if timing or survey quality cannot support an AUC.  There have been some mark resight and mark recapture studies, but to keep the time series consistent, we have stuck with the AUC method primarily.
+-->
 ```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks where most production is from natural spawning and Proportionate Natural Index (PNI) values are generally >= 0.5; light blue time-series are indicator stocks where hatchery producion is dominant, where PNI values are generally < 0.5. Prelminary PNI values are provided in the top right corner of each panel where they are available. See Section on PNI values below for more details.",  warning=FALSE, echo=FALSE, fig.align="center"}
 
 knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
