--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -7,6 +7,14 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 **Principle 1**. LRPs should be consistent with the goal of avoiding serious harm to the stock, as described in @dfoFisheryDecisionMakingFramework2009, and Section \@ref(intro). The LRP should be set above where serious harm is occurring, and should avoid long-term losses, such as those associated with fishing and ecosystem components. 
 
+<!--CH include  fromNHQ:
+refer to more nuanced definition of serious harm, expanded on in intro
+sub-principles from Marentette:
+2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
+2.2	Indicators and LRPs should be representative of the entire stock.
+2.3	Indicators should generally be proportional to the stock attributes they are intended to represent.
+"Under a default assumption that loss of stock structure is serious harm and is to be avoided, the configuration of indicator(s) chosen should typically be representative of the entire “stock.” This could include scenarios where representative or index subcomponents are monitored or combined in various ways to represent the entire “stock.” Indicators should also proportionality with stock attributes they are intended to measure (e.g., CPUE should be an acceptable proxy for stock size), particularly when management measures respond but the relative importance of these characteristics in driving the choice of indicator may be context-dependent"
+-->
 **Principle 2**. LRPs should be selected based on the best available information for the stock.<!--CH: NHQ's principle is best available information to be inclusive, but the citation for the US is for best scientific info--> Criteria for evaluating best scientific information developed for US National Standards may be be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in which LRP estimation method is most appropriate or from various assumptions within a single LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of stock status and clearly communicated.
 
 Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
@@ -18,6 +26,18 @@ Similarly, best practices, or practices that have been demonstrated to work well
 CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpeted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
 -->
 
+<!--CH consider Marentte et al: 
+
+"3.1	At minimum, indicators and LRPs should be feasible to estimate on time scales relevant for management.
+3.2	Consider what indicators are most useful for harvest strategies.
+3.3	While status relative to the LRP triggers the need for a rebuilding plan, reference points in general do not need to be operational control points in harvest control rules.
+3.4	Consider how often LRP estimates will be updated.
+3.5	Consider how advice on stock status will be given.
+3.6	While there is no universal choice, weigh benefits and challenges of less common indicators and LRPs.
+LRPs are part of harvest strategies and success in achieving an objective to avoid serious harm to the stock (and more broadly, the sustainability of the fishery) will depend on other elements such as target harvest rates, tolerable risks of breaching limits and over timeframes risks are considered, not just the LRP.
+At minimum, indicators, LRPs and therefore status should be feasible to measure or estimate. Other operational reasons to consider indicators, LRPs or status metrics may be: cost-effectiveness (impacting the ease and frequency of estimating stock status), communicability (affecting the ease of understanding), simplicity, the role that LRPs or stock status may play in HCRs or triggering the need for a rebuilding plan, or the need to estimate stock status to evaluate either trends over time or performance of management measures. These reasons are not mutually exclusive, and the relative priority of reasons that make a choice of indicator, LRP or metric of status “operationally useful” will be context-dependent, both within or across traditional versus procedural paradigms."
+-->
+
 **Principle 4**. LRPs should be reliably estimated. In other words, to the extent possible LRPs should capture underlying true levels of serious harm instead of noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs.
 
 <!--RE: pgh below
@@ -27,10 +47,26 @@ CH: I think the point of Staton et al. 2017 is that for salmon, statistical inte
 
 Where possible, a statistically integrated approach for estimating LRPs should be considered in order to propagate uncertainties throughout analyses and to be consistent with current best practices in fisheries stock assessments [@puntEssentialFeaturesNextgeneration2020a]. @statonSequentialIntegratedBayesian2017a and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increases realism of model estimates and associated uncertainty. However, @statonSequentialIntegratedBayesian2017a demonstrated that similar point estimates of current status can be achieved by using sequential estimation approaches and the benefits of statistically integrated approaches may not be large enough to warrant an integrated analysis in all cases. 
 
-
+<!--CH: consider Marentette et al: 
+"4.1	Check for consistency and robustness of estimates to uncertainties.
+4.2	Consider whether estimates are plausible given other information about the stock.
+4.3	Consider using historical or empirical proxies if direct estimates are unreliable.
+4.4	Consider the quality of input data.
+4.5	Consider smoothing to address inter-annual variability.
+4.6	Consider simulation testing of estimability.
+Reliable estimation of limit reference points or stock status metrics can mean acceptable consistency, accuracy or precision of estimates (i.e., acceptably low variance or low bias),  and robustness to a range of possible uncertainties (assumptions, stock scale, data points and/or model structure). Reliability of reference points or status may also depend on reliable and consistent data collection. Reliability may be evaluated by examining uncertainty in estimates, sensitivity tests, evaluating the reasonableness of assumptions, simulation testing and/or by comparison to other similar stocks.
+"
+-->
 <!--CH suggestion: I've added another 2 principles from NHQ's list. Let me know what you think.-->
 
 **Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
+
+<!--CH: consider Marentette et al:
+Principle 5: When selecting from multiple alternatives, the choice of stock status indicators and LRPs should take into account risk.
+5.1	If working with fixed values?, consider averaging among plausible alternatives.
+5.2	Consider the highest of several plausible alternatives.
+5.3	Evaluate plausible LRPs with simulation.
+-->
 
 
 **Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.  However, if LRPs cannot be estimated reliably using one method or approach, then consider alternatives approaches based on different sets of assumptions and/or data. 
