--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -3,11 +3,11 @@
 
 ## CU-LEVEL BENCHMARKS AND ASSESSMENTS
 
-LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum - Non Fraser. 
+LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate abundance-based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum. 
 
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner.   These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for one CU in three years. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner. These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho case study for one CU in three years. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
 
-In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs  <!--CH If they are data-deficient, we don't know if they have low levels of synchrony. I suggest changing this next phrase to , "that differ in threats, environmental conditions, life-history characteristics or population capacities", instead of "with low levels of synchrony"-->with low levels of synchrony in which data deficient CUs cannot be represented by proxy. For example, for Inside South Coast Chum - Non Fraser, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status. <!--CH: Luke does this sound okay?-->
+In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs that differ in threats, environmental conditions, life-history characteristics or population capacities, where data deficient CUs cannot be represented by proxy. For example, for Inside South Coast Chum, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status.
 
 ## PROPORTION-BASED LRPS
 
@@ -17,7 +17,7 @@ The reliability of proportion-based LRP estimates depends on the reliability of 
 The decision on which structural form or type of benchmark to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. The challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and (for projection-based LRPs in particular) <!--CH: added this caveat in parentheses, as we didn't actually implement ensemble modelling approaches for proportion-based LRPs, the focus of this section-->using ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
 
 
-In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs, and CU sizes. <!--CH: I added in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. For years in which some CUs were excluded, but all CUs with data were above red,<!--KH: replaced 'in those years' with the more descriptive start to this sentence -->, SMU status would be data-deficient because status of the data-limited CUs excluded from analysis could not be inferred from data-rich CUs that were above red status<!--CH: added this last sentence to align with our decision about DD SMU in Guidelines paper, and the next sentence to show the alternative scenario-->. In recent years, however, at least one data-rich CU has been depleted to red status, providing an SMU status below the proportion-based LRP of 100% (not data deficient) despite the exclusion of several CUs. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs is provided in Holt et al. (in review). We recommend that CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive. We could mention it in our pptx "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
+In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs, and CU sizes. However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. For years in which some CUs were excluded, but all CUs with data were above red,<!--KH: replaced 'in those years' with the more descriptive start to this sentence -->, SMU status would be data-deficient because status of the data-limited CUs excluded from analysis could not be inferred from data-rich CUs that were above red status<!--CH: added this last sentence to align with our decision about DD SMU in Guidelines paper, and the next sentence to show the alternative scenario-->. In recent years, however, at least one data-rich CU has been depleted to red status, providing an SMU status below the proportion-based LRP of 100% (not data deficient) despite the exclusion of several CUs. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs is provided in Holt et al. (in review). We recommend that CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive. We could mention it in our pptx "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
 
 ### Logistic regression-based LRPs
 
@@ -25,23 +25,23 @@ Logistic regression-based LRPs are empirically derived from past observations of
 
 
 
-There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as S~gen~ or the distributional target method applied to the Interior Fraser River Coho study case study, which is not consistent with the recommendation to to apply the Pacific Salmon Status Scanner for CU assessments within proportion-based LRPs. We did not include CU assessments based on the Salmon Scanner for logistic-regression based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression model (see Section \@ref(MethodsChapter) for more details). 
+There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as S~gen~ or the distributional target method applied to the Interior Fraser River Coho case study, which is not consistent with the recommendation to apply the Pacific Salmon Status Scanner for CU assessments within proportion-based LRPs. We did not include CU assessments based on the Salmon Scanner for logistic regression-based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression models (see Section \@ref(MethodsChapter) for more details). 
 
 
 Second, logistic regression-based LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets were above their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation if there have been changes in the correlation in populations dynamics among CUs over time such that current (or future) correlations are not represented by historical data.
 
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation in spawner abundances among CUS of 0.56), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation among CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic regression-based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs could be estimated for Interior Fraser Coho (average correlation in spawner abundances among CUS of 0.56), but not for Inside South Coast Chum (average correlation among CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in Section \@ref(MethodsChapter) can be used to support or reject logistic regression-based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
 
 
-Similar to proportion-based LRPs, CUs without reliable data poses a problem for the estimation of logistic regression-based LRPs. When CUs abundances covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
+Similar to proportion-based LRPs, CUs without reliable data pose a problem for the estimation of logistic regression-based LRPs. When abundance of CUs covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
 
 
 
 ### Projection based LRPs
 
 
-Projection-based LRPs rely on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters, productivity and capacity, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). <!--CH suggested new text (Catarina and Kendra thoughts?) In other marine fisheries, tuning the OM is a critical component of simulation-evaluations. Does this count as 'tuning?'
+Projection-based LRPs rely on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters, productivity and capacity<!--LW: if 'productivity and capacity' are the stock recruitment parameters required, maybe put them between dashes or in brackets?-->, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). <!--CH suggested new text (Catarina and Kendra thoughts?) In other marine fisheries, tuning the OM is a critical component of simulation-evaluations. Does this count as 'tuning?'
 KH: I think the word tuning if fine
 --> Furthermore, we demonstrated an approach to choosing parameters and model assumptions used in the projections so that correlations in spawner abundances in projections were similar to observed correlations.  We recommend that correlations in CUs within projections are explored under various model assumptions, and that model parameters are tuned to derive realistic correlations.
 
