--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -66,16 +66,14 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 5.1	If working with fixed values?, consider averaging among plausible alternatives.
 5.2	Consider the highest of several plausible alternatives.
 5.3	Evaluate plausible LRPs with simulation.
+
+CH: Jan 14, 2022. Change this principle to consider uncertainty and not risk based on comments above and discussion with NHQ
 -->
 
 
 **Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.  However, if LRPs cannot be estimated reliably using one method or approach, then consider alternatives approaches based on different sets of assumptions and/or data. 
+<!--CH: collapse this principle  into principles 1 and 2 based on discussions with NHQ 14 Jan 2022-->
 
-<!--KH: Can we add something to principle 6 to better explain how if differs from reliably estimated?  I was initially confused because principle 4 mentions additional reliability from coherence in LRP estimates from different analytical methods.  Upon thinking about it a bit more, I now think that principle 6 is really saying don't get stuck in one way of thinking (e.g., 0.4Bmsy for LRPs); consider alternative approaches (Brecover, Bo, time-varying models), whereas principle 4 is about data availability and quality, as well as choosing an appropriate estimation method.  Am I on the right track??? 
-LW: Also wondering if alternative paradigms could include Indigenous Knowledge/ Two-Eyed Seeing approaches? 
-CH: Kendra, yes that was what I was thinking, and tried to add some more text on this, but don't want to get into details here on specific methods or examples. Though I can if need be. Luke, I like this idea. And feel like that's not a paradigm we were equipped to explore in our TWG. I have that in future research as I think it should be explored .
-KH: Sounds good; your revision to the reliability principle about helps clarify.
--->
 
 **Principle 7**.  In addition to principles derived for marine species in general (Principles 1-6), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
