LW edits on Ch 3

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -614,7 +614,7 @@ Taken together, these retrospective results highlight that caution should be use
 
 Given that the estimation of logistic regression-based LRPs were sensitive to data availability, projection-based LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.  Projection-based LRPs also have the advantage of being able to incorporate hypotheses about current population and / or fishery dynamics into forward projections, whereas logistic regression-based LRPs are constrained by conditions that have been previously experienced.
 
-The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given a specified fixed exploitation rate policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
+The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given a specified fixed exploitation rate policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above S~gen~. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
 
 Projection-based LRPs were also sensitive to the level of co-variation<!--LW: elsewhere this is covariation--> in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into red status. We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection-based LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
 
