revised principles based on discussion with NHQ

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -148,7 +148,7 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that wild populations
 
 ## ROLE OF LRPS {#roleLRPs}
 
-LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, without actually being operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. 
+LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform fishery management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, without actually being operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
 
 
