--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -1,32 +1,36 @@
 # PRINCIPLES FOR LRP DEVELOPMENT {#principles}
 
 
-<!--CH:  ask Julie and Danny Ings for advice on making these principles and LRPs as consistent as possible with NHQ guidance. If helpful, we could mention in the text that the 6 principles we adapted from an NHQ are a subset of 6 principles designed for the implementation of LRPs. The additional 2 principles focuse on changing LRP methods and communication, which are addressed within principle 2 (science is not static) and 4 (clarity in communication is required to be operational).  -->
 
-Here we outline principles for developing LRPs for Pacific salmon, adapted from those developed for national-level guidance on LRPs (Marentette et al. in prep). That guidance allows for flexibility in the development of LRPs to respect differences in species contexts and data types, quantities, and qualities, and is not meant to be prescriptive. By following similar principles, Pacific salmon LRPs will be aligned with national direction while accounting for unique characteristics of salmon species and data. 
+Here we outline principles for developing LRPs for Pacific salmon, adapted from those developed for national-level guidance on LRPs (Marentette et al. in prep). That guidance allows for flexibility in the development of LRPs to respect differences in species life-histories and data types, quantities, and qualities, and is not meant to be prescriptive. By following similar principles, Pacific salmon LRPs are aligned with national direction. 
 
-**Principle 1**. LRPs should be consistent with the goal of avoiding serious harm to the stock, as described in @dfoFisheryDecisionMakingFramework2009, and Section \@ref(intro). The LRP should be set above where serious harm is occurring, and should avoid long-term losses, such as those associated with fishing and ecosystem components. 
+**Principle 1**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009, and Section \@ref(intro). The LRP should be set above where serious harm occurs, and should avoid long-term losses, such as those associated with fishing and ecosystem components. In addition, LRP should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are used to develop LRPs and those components are thought to represent the entire SMU (see Section \ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
 
-<!--CH include  fromNHQ:
-refer to more nuanced definition of serious harm, expanded on in intro
-sub-principles from Marentette:
+<!--Marentette et al Principle 2:
 2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
 2.2	Indicators and LRPs should be representative of the entire stock.
 2.3	Indicators should generally be proportional to the stock attributes they are intended to represent.
-"Under a default assumption that loss of stock structure is serious harm and is to be avoided, the configuration of indicator(s) chosen should typically be representative of the entire “stock.” This could include scenarios where representative or index subcomponents are monitored or combined in various ways to represent the entire “stock.” Indicators should also proportionality with stock attributes they are intended to measure (e.g., CPUE should be an acceptable proxy for stock size), particularly when management measures respond but the relative importance of these characteristics in driving the choice of indicator may be context-dependent"
--->
-**Principle 2**. LRPs should be selected based on the best available information for the stock.<!--CH: NHQ's principle is best available information to be inclusive, but the citation for the US is for best scientific info--> Criteria for evaluating best scientific information developed for US National Standards may be be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in which LRP estimation method is most appropriate or from various assumptions within a single LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of stock status and clearly communicated.
+"Under a default assumption that loss of stock structure is serious harm and is to be avoided, the configuration of indicator(s) chosen should typically be representative of the entire “stock.” This could include scenarios where representative or index subcomponents are monitored or combined in various ways to represent the entire “stock.” Indicators should also proportionality with stock attributes they are intended to measure (e.g., CPUE should be an acceptable proxy for stock size), particularly when management measures respond but the relative importance of these characteristics in driving the choice of indicator may be context-dependent"-->
+
+**Principle 2**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, knowledge of underlying biological processes, traditional knowledge of the SMU, and comparison with similar SMU (Marentette et al. in prep). Criteria for evaluating best scientific information developed for US National Standards may be be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in which LRP estimation method is most appropriate or from various assumptions within a single LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and clearly communicated.
 
 Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
 
 Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. "The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time" [@sainsburyBestPracticeReference2008].
 
 
-**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the stock. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases. To be operational, LRPs should also be easy to communicate to managers and stakeholders in a way that can be understood and used to inform decisions. <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) 
-CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpeted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
+
+<!--CH: collapse this principle  into principles 1 and 2 based on discussions with NHQ 14 Jan 2022-->
+
+<!--CH to consider further emphasizing possibility of using TK for identifying LRPs in other places in this WP?-->
+
+**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the SMUs. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  LRPs should also be communicable to managers and stakeholders in a way that inform decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
+
+<!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) 
+CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpreted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
 -->
 
-<!--CH consider Marentte et al: 
+<!--CH consider Marentette et al.: 
 
 "3.1	At minimum, indicators and LRPs should be feasible to estimate on time scales relevant for management.
 3.2	Consider what indicators are most useful for harvest strategies.
@@ -38,7 +42,9 @@ LRPs are part of harvest strategies and success in achieving an objective to avo
 At minimum, indicators, LRPs and therefore status should be feasible to measure or estimate. Other operational reasons to consider indicators, LRPs or status metrics may be: cost-effectiveness (impacting the ease and frequency of estimating stock status), communicability (affecting the ease of understanding), simplicity, the role that LRPs or stock status may play in HCRs or triggering the need for a rebuilding plan, or the need to estimate stock status to evaluate either trends over time or performance of management measures. These reasons are not mutually exclusive, and the relative priority of reasons that make a choice of indicator, LRP or metric of status “operationally useful” will be context-dependent, both within or across traditional versus procedural paradigms."
 -->
 
-**Principle 4**. LRPs should be reliably estimated. In other words, to the extent possible LRPs should capture underlying true levels of serious harm instead of noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs.
+**Principle 4**. LRPs should be reliably estimated. In other words, to the extent possible LRPs should capture underlying true levels of serious harm  with acceptable accuracy and precision, beyond random noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs. Reliability can be addressed by checking the sensitivity of LRPs to uncertainties in underlying data, model or assumptions, simulation evaluation, or simply assessing plausibility given biological or life-history information about the SMU (Marentette et al. in prep.).
+
+LRPs can be derived using multiple analytical approaches. If LRPs cannot be estimated reliably using one method or approach, then consider alternatives approaches based on different sets of assumptions and/or data. When LRP estimates converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
 
 <!--RE: pgh below
 CW: 'statistically integrated' or sequential Bayes? i.e. sampling from posterior. 
@@ -46,6 +52,7 @@ CH: I think the point of Staton et al. 2017 is that for salmon, statistical inte
 ÇW: agreed. --> 
 
 Where possible, a statistically integrated approach for estimating LRPs should be considered in order to propagate uncertainties throughout analyses and to be consistent with current best practices in fisheries stock assessments [@puntEssentialFeaturesNextgeneration2020a]. @statonSequentialIntegratedBayesian2017a and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increases realism of model estimates and associated uncertainty. However, @statonSequentialIntegratedBayesian2017a demonstrated that similar point estimates of current status can be achieved by using sequential estimation approaches and the benefits of statistically integrated approaches may not be large enough to warrant an integrated analysis in all cases. 
+
 
 <!--CH: consider Marentette et al: 
 "4.1	Check for consistency and robustness of estimates to uncertainties.
@@ -57,30 +64,29 @@ Where possible, a statistically integrated approach for estimating LRPs should b
 Reliable estimation of limit reference points or stock status metrics can mean acceptable consistency, accuracy or precision of estimates (i.e., acceptably low variance or low bias),  and robustness to a range of possible uncertainties (assumptions, stock scale, data points and/or model structure). Reliability of reference points or status may also depend on reliable and consistent data collection. Reliability may be evaluated by examining uncertainty in estimates, sensitivity tests, evaluating the reasonableness of assumptions, simulation testing and/or by comparison to other similar stocks.
 "
 -->
-<!--CH suggestion: I've added another 2 principles from NHQ's list. Let me know what you think.-->
 
-**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
+**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data,  include fewer assumptions, and explicitly account for underlying uncertainties should be preferred. 
 
-<!--CH: consider Marentette et al:
+When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data quality/quantities can be evaluated in simulation evaluation, where LRPs that are less sensitive to key uncertainties would be preferred.
+
+
+<!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
+
+<!--CH: from Marentette et al:
 Principle 5: When selecting from multiple alternatives, the choice of stock status indicators and LRPs should take into account risk.
 5.1	If working with fixed values?, consider averaging among plausible alternatives.
 5.2	Consider the highest of several plausible alternatives.
 5.3	Evaluate plausible LRPs with simulation.
 
-CH: Jan 14, 2022. Change this principle to consider uncertainty and not risk based on comments above and discussion with NHQ
 -->
 
 
-**Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.  However, if LRPs cannot be estimated reliably using one method or approach, then consider alternatives approaches based on different sets of assumptions and/or data. 
-<!--CH: collapse this principle  into principles 1 and 2 based on discussions with NHQ 14 Jan 2022-->
-
-
-**Principle 7**.  In addition to principles derived for marine species in general (Principles 1-6), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 
 ## Applying the principles to LRP development
 
-For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021]. However, for Pacific salmon, LRPs that consider the distribution of abundances among component CUs as well as alternative metrics of status within CUs such as trends in abundances and distribution of spawning, are considered here are more consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-4 from Marentette et al. (in prep.), and Principle 7 for Pacific salmon. We further develop guidelines for implementing these methods (Section \@ref(guidelines)) aligned with Principles 5-6 from Marentette et al. (in prep.).  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
+For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021]. However, for Pacific salmon, LRPs that consider the distribution of abundances among component CUs as well as alternative metrics of status within CUs such as trends in abundances and distribution of spawning, are considered here are more consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-5 from Marentette et al. (in prep.), and Principle 6 for Pacific salmon.  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
 Our intention is to describe approaches for deriving CU status applicable over a range of data qualities and types, and provide LRPs that integrate the CU-level information to the scale of SMUs.  In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Then candidate LRPs that integrate CU statuses are briefly described falling into two categories: those based on the proportion of component CUs above the red zone and those based on aggregate abundances.  A more detailed description of LRPs with technical details is included in Holt et al. (in review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
